--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^1",
+    "bits-ui": "^0.21.10",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tauri-apps/cli": "^1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@tauri-apps/cli": "^1"
+    "vite": "^5.0.3"
   }
 }
