--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tauri-apps/api": "^1",
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.381.0",
+    "paneforge": "^0.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   },
@@ -31,6 +33,7 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "vite-plugin-singlefile": "^2.0.1"
   }
 }
