--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.381.0",
     "paneforge": "^0.0.4",
+    "svelvet": "^10.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   },
