--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^1",
+    "@types/markdown-it": "^14.1.1",
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.381.0",
@@ -27,7 +28,9 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@tauri-apps/cli": "^1",
+    "@types/node": "^20.14.8",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "svelte": "^4.2.7",
